tests/sksl/errors/golden/FieldAfterRuntimeArray.glsl
### Compilation failed:

error: 1: array must have a size
error: 2: array must have a size
2 errors
